<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <!-- Strings for menu items -->

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">In Detail</string>
    <string name="settings_name">Settings</string>

    <string name="location_setting_title">Location</string>
    <string name="location_setting_key" translatable="false">location</string>
    <string name="location_setting_default" translateable="false">PA4</string>

    <string name="units_setting_title">Units</string>
    <string name="units_setting_key" translatable="false">units</string>
    <string name="units_setting_default" translateable="false">metric</string>


</resources>
