<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/location_setting_default"
        android:inputType="text"
        android:key="@string/location_setting_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/location_setting_title" />

    <ListPreference
        android:defaultValue="@string/units_setting_default"
        android:entries="@array/units_entries"
        android:entryValues="@array/units_entryValues"
        android:key="@string/units_setting_key"
        android:title="@string/units_setting_title" />


</PreferenceScreen>
